frontend-react/src/bootstrap.scss
@for $i from 1 through 6 {
  $zIndexBackdrop:  #{1040 + (5 * $i)};
  $zIndexContent:  #{1040 + (5 * $i) + 2};
  .modal-backdrop.show:nth-of-type(#{$i}) {
    z-index: $zIndexBackdrop;
  }
  div[role="dialog"][aria-modal="true"]:nth-of-type(#{$i}) {
    z-index: $zIndexContent;
  }
}

@import "bootstrap/scss/bootstrap.scss";

